manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "authorization-e7fa"
    labels:
        app: "authorization-e7fa"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "authorization-e7fa"
